# evm-cli

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  DESIGN_REVIEW.md  PRD.md  QA_RECORDING_ANALYSIS.md  QA_RECORDING_SETUP.md  RALPH_LOOP_COMPLETION_REPORT.md  README.md  VHS_INTEGRATION_GUIDE.md  VHS_QUICK_REFERENCE.md  card-navigation.ascii  card-types.ascii  configuration.ascii  focus-management.ascii  keyboard-shortcuts.ascii  layout-and-zones.ascii  parameter-input.ascii  validation-feedback.ascii
.claude/: SPEC_IMPLEMENTATION_COMPLETE.md  design-review-main-interface.md  qa-main-interface.md  qa-report.md
demo/: demo.ascii  demo.cast  demo.tape  fibonacci.sol  full-demo.ascii  full-recording.ascii  full-recording.tape  record-demo.sh  run-demo-vhs.sh
docs/: compilation.md  demo.cast  feature-compilation.md
examples/: Demo.sol
features/: output-card-feature-testing-strategy.md  output-card-feature.md
scripts/: README.md  record-spec-tape.sh
spec/: DESIGN_EXPERT_REVIEW.md  QA_EXPERT_GUIDE.md  README.md  RECORDINGS_MANIFEST.md  contracts-menu.md  ctrl-p-menu.md  general-settings.md  main-interface.md  output-panel.md  tx-and-call-popup.md
specs/: README.md  contracts-menu.md  ctrl-p-menu.md  general-settings.md  main-interface.md  output-panel.md  tx-and-call-popup.md  ui-navigation.md
src/: app.rs  cards.rs  compile.rs  context_menu.rs  filter_ui.rs  logger.rs  main.rs  method_list.rs  prompts.rs  provider.rs  solc.rs  store.rs  ui.rs
tests/: 01-load-contract.tape  02-deploy-with-args.tape  03-call-functions.tape  04-error-handling.tape  (+4 more)
(+164 files in other folders)
