[package]
name = "evm-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "An interactive CLI for deploying and interacting with Solidity contracts"
repository = "https://github.com/paritytech/evm-cli"
readme = "README.md"

[[bin]]
name = "evm-cli"
path = "src/main.rs"

[dependencies]
alloy = { version = "1.0", features = [
    "providers",
    "signers",
    "signer-local",
    "contract",
    "json-abi",
    "dyn-abi",
    "rpc-types",
    "network",
    "transport-http",
] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
dotenvy = "0.15"
env_logger = "0.11"
hex = "0.4"
log = "0.4"
ratatui = "0.29"
tui-tree-widget = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2.5"
